test/vm/errors/parser/unexpected_token_stmt.ach
// Parser error: unexpected token at statement position
// Expected: parser error about unexpected token

let x = 10
) + 5
let y = 20
